--- a/src/app/pages/enquiry/enquiry.component.html
+++ b/src/app/pages/enquiry/enquiry.component.html
@@ -6,19 +6,19 @@
         <form id="contactForm" class="space-y-4">
             <div class="flex flex-col">
                 <label for="name" class="text-sm text-semibold font-mono text-gray-200">Your Name*</label>
-                <input type="text" id="name" name="name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
+                <input type="text" id="name" name="name" placeholder="Enter your name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
             </div>
             <div class="flex flex-col">
                 <label for="phone" class="text-sm  text-semibold font-mono text-gray-200">Your Phone Number*</label>
-                <input type="tel" id="phone" name="phone" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
+                <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
             </div>
             <div class="flex flex-col">
                 <label for="email" class="text-sm  text-semibold font-mono text-gray-200">Your Email ID*</label>
-                <input type="email" id="email" name="email" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
+                <input type="email" id="email" name="email" placeholder="Enter your email id" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
             </div>
             <div class="flex flex-col">
                 <label for="question" class="text-sm  text-semibold font-mono text-gray-200"> Your Question for Us*</label>
-                <textarea id="question" name="question" rows="4" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required></textarea>
+                <textarea id="question" name="question" rows="4" placeholder="Enter your question here" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required></textarea>
             </div>
             <div class="flex justify-center">
                 <button type="submit" class="bg-blue-900 text-white py-3 px-7 font-mono rounded-full hover:bg-blue-400 focus:outline-none focus:bg-blue-500">
