update: connected a mail API

--- a/src/app/pages/enquiry/enquiry.component.html
+++ b/src/app/pages/enquiry/enquiry.component.html
@@ -1,9 +1,9 @@
 <div id="#enquiry" #enquiry>
 <div  class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/inquirybg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
-    <div class="backdrop-blur-lg hover:scale-110 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl border-4 border-black pr-14">
+    <div class="backdrop-blur-lg hover:scale-105 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl border-4 border-black pr-14">
         <h1 class="text-2xl font-extrabold text-white font-serif mb-4">YOUR INQUIRIES, OUR INSIGHTS!</h1>
         <div class="flex">
-        <form id="contactForm" class="space-y-4">
+        <form action="https://formspree.io/f/xnqkveyg" method="POST" id="contactForm" class="space-y-4">
             <div class="flex flex-col">
                 <label for="name" class="text-sm text-semibold font-mono text-gray-200">Your Name*</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name" class="border rounded-lg px-3 py-2 focus:outline-none focus:border-blue-500" required>
