feat: added a loader to all pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+<ngx-ui-loader></ngx-ui-loader>
 <nav>
     <app-navbar></app-navbar>
 </nav>
-
+    
     <router-outlet></router-outlet>
 <app-footer></app-footer>
 
