--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,4 +1,5 @@
 <div id="#about" #about>
+  <app-full-page-loader [loading]="loading"></app-full-page-loader>
 <div>
     <div class="flex flex-col md:flex-row"  style="background-image: url('/assets/about.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="md:w-1/2 flex justify-center items-center">
