--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div id="#" #home>
+   <app-full-page-loader [loading]="loading"></app-full-page-loader>
 <div class="p-4 pb-12 sm:p-6 dark:bg-black relative flex items-center justify-center min-h-screen" style="background-image: url('/assets/homegym.jpg'); background-size: cover; background-repeat: no-repeat;">
     <div class="text-left max-md:px-4 relative z-10 backdrop-blur-sm bg-opacity-40 bg-gray-900 p-6 rounded-xl">
        <h1 class="text-white font-bold text-2xl md:text-3xl lg:text-4xl">LOOKING FOR</h1>
