--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,5 @@
 <div id="#register" #register>
+    <app-full-page-loader [loading]="loading"></app-full-page-loader>
 <div  class="min-h-screen flex max-md:flex-col justify-center items-center" style="background-image: url('/assets/registerbg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     <div class="backdrop-blur-lg  hover:scale-105 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl pr-14">
         <h1 class="text-2xl font-extrabold text-gray-100 font-serif mb-4">LET'S GROW TOGETHER!</h1>
