fix: form ui changes

--- a/src/app/pages/enquiry/enquiry.component.html
+++ b/src/app/pages/enquiry/enquiry.component.html
@@ -1,7 +1,7 @@
 <div id="#enquiry" #enquiry>
     <app-full-page-loader [loading]="loading"></app-full-page-loader>
 <div  class="min-h-screen flex justify-center items-center" style="background-image: url('/assets/inquirybg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
-    <div class="backdrop-blur-lg hover:scale-105 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl border-4 border-black pr-14">
+    <div class="backdrop-blur-lg  transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl  pr-14">
         <h1 class="text-2xl font-extrabold text-white font-serif mb-4">YOUR INQUIRIES, OUR INSIGHTS!</h1>
         <div class="flex">
         <form action="https://formspree.io/f/xnqkveyg" method="POST" id="contactForm" class="space-y-4">
@@ -28,7 +28,7 @@
             </div>
         </form>
         <div class="w-3/4 pl-14 py-10 flex justify-center items-center">
-            <img src="/assets/questions.png" alt="Image" class="w-auto h-full">
+            <img src="/assets/query.png" alt="Image" class="w-auto h-full">
         </div>
     </div>
 </div>
