update: ui changes

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -2,7 +2,7 @@
     <app-full-page-loader [loading]="loading"></app-full-page-loader>
     <div class="flex items-center justify-center h-screen" style="background-image: url('/assets/contactfinalbg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
     
-    <div class=" p-8 w-1/2 items-start rounded-lg shadow-2xl border-2 border-black
+    <div class=" md:p-8 w-1/2 items-start rounded-lg shadow-2xl border-2 border-black
     hover:scale-110 transition duration-500 backdrop-blur-lg">
         <h1 class="text-3xl font-extrabold text-gray-300 text-center font-serif mb-6">Get In Touch!</h1>
         <div class="flex ">
@@ -21,7 +21,7 @@
             </li>
         </ul>
         <div class="pl-14">
-            <img src="/assets/call.png" alt="CONTACT US" class="w-full h-auto" >
+            <img src="/assets/call.png" alt="CONTACT US" class="w-full h-auto hidden md:block" >
         </div>
     </div>
 </div>
