--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,8 +1,8 @@
 <div id="#register" #register>
     <app-full-page-loader [loading]="loading"></app-full-page-loader>
 <div  class="min-h-screen flex max-md:flex-col justify-center items-center" style="background-image: url('/assets/registerbg.png'); background-blend-mode: lighten; background-size: cover; background-repeat: no-repeat;">
-    <div class="backdrop-blur-lg  border-4 border-gray-800 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl pr-14">
-        <h1 class="text-2xl font-extrabold text-gray-100 font-serif mb-4">LET'S GROW TOGETHER!</h1>
+    <div class="backdrop-blur-lg  md:border-4 border-gray-800 transition duration-500 transform p-8 rounded-lg shadow-md max-w-3xl pr-14">
+        <h1 class="text-2xl font-extrabold text-black md:text-gray-100 font-serif mb-4">LET'S GROW TOGETHER!</h1>
         <div class="flex">
         <form action="https://formspree.io/f/xwkdbgjb" method="POST" class="space-y-4">
             <div class="flex flex-col">
@@ -39,14 +39,14 @@
             </div>
         </form>
         <div class="pl-16 flex justify-center items-center">
-            <img src="/assets/regcard.png" alt="Image" class="w-full h-full">
+            <img src="/assets/regcard.png" alt="Image" class="w-full h-full hidden md:block">
         </div>
     </div>
 </div>  
 </div>
 <div class="py-2 bg-orange-50 px-6">
     <div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col justify-center items-center text-gray-700 text-center gap-12">
-        <h1 class="text-4xl font-extrabold text-left font-serif lg:pr-10">We can offer you way more than what others can!</h1>
+        <h1 class="text-4xl font-extrabold md:text-left font-serif text-center lg:pr-10">We can offer you way more than what others can!</h1>
         <img src="/assets/bannerlogo.png" alt="PulsePower" class="w-1/3">
     </div>
     </div>
