fix: padding modified

--- a/src/app/pages/enquiry/enquiry.component.html
+++ b/src/app/pages/enquiry/enquiry.component.html
@@ -33,9 +33,9 @@
     </div>
 </div>
 </div>
-<div class="py-2 bg-orange-50 px-6">
+<div class="py-2 bg-orange-50 px-8">
     <div class="border-2 border-gray-500 rounded-lg py-14 my-10 flex flex-col md:flex-row justify-center items-center text-gray-700 text-center gap-12">
-        <h1 class="text-3xl font-extrabold text-center font-serif lg:pr-10">We have got you covered. Reach out to us for an queries regarding our programmes!
+        <h1 class="text-3xl font-extrabold text-center font-serif lg:pr-10">We have got you covered! Reach out to us for an queries regarding our programmes!
         </h1>
     </div>
 </div>
